# GroceryManager

./: CMakeLists.txt  README.md  billing.c  billing.h  cart.c  cart.h  enum.h  file_operations.c  file_operations.h  inventory.c  inventory.h  main.c  main1.c  main1.h  report.c  report.h  start.c  user.c  user.h
